project-do-an/Php-project_TechnologyBlog-main/k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: an11113/database:latest
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: php-app
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
