project-do-an/Php-project_TechnologyBlog-main/k8s/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: php-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: an11113/php:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: php-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: php-app
