project-do-an/Php-project_TechnologyBlog-main/k8s/routers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routers
  namespace: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: routers
  template:
    metadata:
      labels:
        app: routers
    spec:
      containers:
      - name: routers
        image: an11113/routers:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: routers-service
  namespace: php-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: routers
