project-do-an/Php-project_TechnologyBlog-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: php-app
spec:
  ingressClassName: nginx
  rules:
  - host: app.vuan3086.id.vn # Thay thế bằng tên miền của bạn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: php-service
            port:
              number: 80
      - path: /routers
        pathType: Prefix
        backend:
          service:
            name: routers-service
            port:
              number: 80
